# nonebot_plugin_farm

./: README.md  pyproject.toml
nonebot_plugin_farm/: __init__.py  command.py  config.py  dbService.py  json.py  request.py
nonebot_plugin_farm/config/: bait.json  fish.json  fish_pool.json  fishing_system.json
nonebot_plugin_farm/database/: userFishingState.py
nonebot_plugin_farm/event/: event.py
nonebot_plugin_farm/farm/: farm.py  fishing.py  shop.py
nonebot_plugin_farm/log/: log.md
nonebot_plugin_farm/resource/db/: plant.db
