[tool.poetry]
name = "nonebot_plugin_farm"
version = "1.7"
description = "IRONY's Farm"
authors = ["ElainaFanBoy <demo0929@vip.qq.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ElainaFanBoy/nonebot_plugin_farm.git"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.1.3"
aiosqlite = "^0.21.0"
httpx = ">=0.27.2,<1.0.0"
pydantic = "<=2.10.6"
zhenxun-utils = "^0.2.1"
rich = "^13.9.4"
nonebot-plugin-alconna = ">=0.46.3,<1.0.0"
nonebot-plugin-uninfo = "^0.6.0"
nonebot-plugin-waiter = "^0.8.1"
nonebot-plugin-localstore = "^0.7.4"
nonebot-plugin-apscheduler = "^0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
